--- a/provide-flow/Dockerfile
+++ b/provide-flow/Dockerfile
@@ -11,7 +11,12 @@ COPY reservationprovideservice.war /opt/tomcat/webapps/
 COPY Gxpprovideservice.war /opt/tomcat/webapps/
 COPY atsprovideservice.war /opt/tomcat/webapps/
 
-#COPY listenerapp-config.properties /opt/tomcat/lib/
+COPY orchestration-config.properties /opt/tomcat/lib/
+COPY reservation-config.properties /opt/tomcat/lib/
+COPY gxpprovideservice-config.properties /opt/tomcat/lib/
+COPY atsprovideservice-config.properties /opt/tomcat/lib/
+
+#COPY orchestration-config.properties /opt/tomcat/lib/
 
 #Step1:sudo docker build -t provideflow:2 /tmp/docker_demo2/provideflow_docker
 #Step2:sudo docker run -d -p 8080:8080 provideflow:2 or  docker run -it --rm -p 8080:8080 provideflow:2
