--- a/listener-app/listenerapp-config.properties
+++ b/listener-app/listenerapp-config.properties
@@ -19,22 +19,22 @@ isAtsAllowed = true
 isEVAllowed = true
 
 # Ticketing payload service configurations to push to gam ats
-nge.disney.ats.host=http://10.74.100.243:9081
+nge.disney.ats.host=http://StoreELB-1086313071.us-west-2.elb.amazonaws.com:8080
 nge.disney.ats.context.root=ticketing-payload-service
 nge.disney.ats.endpoint=/processticketingpayload
 
 # Ticketing payload service configurations to process ev details
-nge.disney.ev.host=http://10.74.100.243:9081
+nge.disney.ev.host=http://StoreELB-1086313071.us-west-2.elb.amazonaws.com:8080
 nge.disney.ev.context.root=store-service
 nge.disney.ev.endpoint=/storepayload
 
 # Reservation payload service configurations to process ev details
-nge.disney.dreams.host=http://10.74.100.243:9081
+nge.disney.dreams.host=http://StoreELB-1086313071.us-west-2.elb.amazonaws.com:8080
 nge.disney.dreams.context.root=store-service
 nge.disney.dreams.endpoint=/storepayload
 
 # Reservation call back service configuration
-nge.disney.reservationcallback.host=http://10.74.100.243:9081
+nge.disney.reservationcallback.host=http://StoreELB-1086313071.us-west-2.elb.amazonaws.com:8080
 nge.disney.reservationcallback.context.root=dreamsapp
 nge.disney.reservationcallback.endpoint=/providereservationpayload
 
