--- a/listener-app/logging-listenerapp-config.properties
+++ b/listener-app/logging-listenerapp-config.properties
@@ -1,7 +1,7 @@
-rabbit.nge.host1=10.74.100.103
-rabbit.nge.port1.1=5673
-rabbit.nge.host2=10.74.100.103
-rabbit.nge.port2.2=5673
+rabbit.nge.host1=RabbitMQELB-152561825.us-west-2.elb.amazonaws.com
+rabbit.nge.port1.1=5672
+rabbit.nge.host2=RabbitMQELB-152561825.us-west-2.elb.amazonaws.com
+rabbit.nge.port2.2=5672
 rabbit.nge.username=admin
 rabbit.nge.password=admin
 
