--- a/store-flow/ticketing-payload-service-config.properties
+++ b/store-flow/ticketing-payload-service-config.properties
@@ -3,6 +3,6 @@ redis.nge.port=6379
 
 #Mysql Properties
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://10.74.100.243:3306/sfoneview
-username=root
-password=root
+url=jdbc:mysql://demo2db.cxoqiuh7iisd.us-west-2.rds.amazonaws.com:3306/sfoneview
+username=demo2user
+password=password
