--- a/store-flow/gxpapp-config.properties
+++ b/store-flow/gxpapp-config.properties
@@ -1,9 +1,9 @@
-nge.disney.gxp.host=http://10.74.100.243:9081
+nge.disney.gxp.host=http://StoreELB-1086313071.us-west-2.elb.amazonaws.com:8080
 nge.disney.gxp.context.root=gxp-service
 nge.disney.gxp.endpoint=/invokegxpservice
 
 #Mysql Properties
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://10.74.100.243:3306/sfoneview
-username=root
-password=root
+url=jdbc:mysql://demo2db.cxoqiuh7iisd.us-west-2.rds.amazonaws.com:3306/sfoneview
+username=demo2user
+password=password
