--- a/store-flow/gxpapp-config.properties
+++ b/store-flow/gxpapp-config.properties
@@ -1,4 +1,4 @@
-nge.disney.gxp.host=http://StoreELB-1086313071.us-west-2.elb.amazonaws.com:8080
+nge.disney.gxp.host=http://storeelb-1837431292.us-west-2.elb.amazonaws.com:8080
 nge.disney.gxp.context.root=gxp-service
 nge.disney.gxp.endpoint=/invokegxpservice
 
