--- a/listener-app/listenerapp-config.properties
+++ b/listener-app/listenerapp-config.properties
@@ -1,6 +1,6 @@
-rabbit.nge.host1=RabbitMQELB-152561825.us-west-2.elb.amazonaws.com
+rabbit.nge.host1=rabbitelb-996581662.us-west-2.elb.amazonaws.com
 rabbit.nge.port1.1=5672
-rabbit.nge.host2=RabbitMQELB-152561825.us-west-2.elb.amazonaws.com
+rabbit.nge.host2=rabbitelb-996581662.us-west-2.elb.amazonaws.com
 rabbit.nge.port2.2=5672
 rabbit.nge.username=admin
 rabbit.nge.password=admin
@@ -19,22 +19,22 @@ isAtsAllowed = true
 isEVAllowed = true
 
 # Ticketing payload service configurations to push to gam ats
-nge.disney.ats.host=http://StoreELB-1086313071.us-west-2.elb.amazonaws.com:8080
+nge.disney.ats.host=http://storeelb-1837431292.us-west-2.elb.amazonaws.com:8080
 nge.disney.ats.context.root=ticketing-payload-service
 nge.disney.ats.endpoint=/processticketingpayload
 
 # Ticketing payload service configurations to process ev details
-nge.disney.ev.host=http://StoreELB-1086313071.us-west-2.elb.amazonaws.com:8080
+nge.disney.ev.host=http://storeelb-1837431292.us-west-2.elb.amazonaws.com:8080
 nge.disney.ev.context.root=store-service
 nge.disney.ev.endpoint=/storepayload
 
 # Reservation payload service configurations to process ev details
-nge.disney.dreams.host=http://StoreELB-1086313071.us-west-2.elb.amazonaws.com:8080
+nge.disney.dreams.host=http://storeelb-1837431292.us-west-2.elb.amazonaws.com:8080
 nge.disney.dreams.context.root=store-service
 nge.disney.dreams.endpoint=/storepayload
 
 # Reservation call back service configuration
-nge.disney.reservationcallback.host=http://StoreELB-1086313071.us-west-2.elb.amazonaws.com:8080
+nge.disney.reservationcallback.host=http://storeelb-1837431292.us-west-2.elb.amazonaws.com:8080
 nge.disney.reservationcallback.context.root=dreamsapp
 nge.disney.reservationcallback.endpoint=/providereservationpayload
 
