--- a/provide-flow/reservation-config.properties
+++ b/provide-flow/reservation-config.properties
@@ -1,4 +1,4 @@
 redis.nge.host=127.0.0.1
 redis.nge.port=6379
 #reservation.app.host=http://localhost:8081/dreamsapp/providereservationpayload?canonicalId=
-reservation.app.host=http://StoreELB-1086313071.us-west-2.elb.amazonaws.com:8080/dreamsapp/providereservationpayload?canonicalId=
+reservation.app.host=http://storeelb-1837431292.us-west-2.elb.amazonaws.com:8080/dreamsapp/providereservationpayload?canonicalId=
