--- a/provide-flow/orchestration-config.properties
+++ b/provide-flow/orchestration-config.properties
@@ -1,6 +1,6 @@
 
-guest.servicehost=http://StoreELB-1086313071.us-west-2.elb.amazonaws.com:8080/guest-service/
-ev.service.host=http://StoreELB-1086313071.us-west-2.elb.amazonaws.com:8080/ev-service/
-reservation.service.host=http://ProvideELB-1069897825.us-west-2.elb.amazonaws.com:8080/reservationprovideservice/
-ats.service.host=http://ProvideELB-1069897825.us-west-2.elb.amazonaws.com:8080/atsprovideservice/
-provide.service.host=http://ProvideELB-1069897825.us-west-2.elb.amazonaws.com:8080/Gxpprovideservice/
+guest.servicehost=http://storeelb-1837431292.us-west-2.elb.amazonaws.com:8080/guest-service/
+ev.service.host=http://storeelb-1837431292.us-west-2.elb.amazonaws.com:8080/ev-service/
+reservation.service.host=http://provideelb-447383168.us-west-2.elb.amazonaws.com:8080/reservationprovideservice/
+ats.service.host=http://provideelb-447383168.us-west-2.elb.amazonaws.com:8080/atsprovideservice/
+provide.service.host=http://provideelb-447383168.us-west-2.elb.amazonaws.com:8080/Gxpprovideservice/
