--- a/provide-flow/gxpprovideservice-config.properties
+++ b/provide-flow/gxpprovideservice-config.properties
@@ -1,1 +1,1 @@
-gxp.app.host=http://StoreELB-1086313071.us-west-2.elb.amazonaws.com:8080/gxpapp/
+gxp.app.host=http://storeelb-1837431292.us-west-2.elb.amazonaws.com:8080/gxpapp/
