implemented logger for storeflow.

--- a/store-flow/Dockerfile
+++ b/store-flow/Dockerfile
@@ -22,6 +22,7 @@ COPY gxpservice-config.properties /opt/tomcat/lib/
 COPY guestservice-config.properties /opt/tomcat/lib/
 COPY evservice-config.properties /opt/tomcat/lib/
 COPY dreamsapp-config.properties /opt/tomcat/lib/
+COPY log4j.properties /opt/tomcat/lib/
 
 #Step1:sudo docker build -t storeflow:2 /tmp/docker_demo2/storeflow_docker
 #Step2:sudo docker run -d -p 8080:8080 storeflow:2 or  docker run -it --rm -p 8080:8080 storeflow:2
