--- a/store-flow/gxpservice-config.properties
+++ b/store-flow/gxpservice-config.properties
@@ -1,4 +1,4 @@
-nge.disney.gs.host=http://storeelb-1837431292.us-west-2.elb.amazonaws.com:8080
+nge.disney.gs.host=http://ec2-35-162-254-83.us-west-2.compute.amazonaws.com:8080
 nge.disney.gs.context.root=guest-service
 nge.disney.gs.fetchxid.endpoint=/providexid
 nge.disney.gs.storeguestkeys.endpoint=/storeguestkeys
