--- a/store-flow/storeservice-config.properties
+++ b/store-flow/storeservice-config.properties
@@ -1,11 +1,11 @@
 #guestkeys service config properties
-nge.disney.gs.host=http://storeelb-1837431292.us-west-2.elb.amazonaws.com:8080
+nge.disney.gs.host=http://ec2-35-162-254-83.us-west-2.compute.amazonaws.com:8080
 nge.disney.gs.context.root=guest-service
 nge.disney.gs.fetchxid.endpoint=/providexid
 nge.disney.gs.storeguestkeys.endpoint=/storeguestkeys
 
 #ev service config properties
-nge.disney.ev.host=http://storeelb-1837431292.us-west-2.elb.amazonaws.com:8080
+nge.disney.ev.host=http://ec2-35-162-254-83.us-west-2.compute.amazonaws.com:8080
 nge.disney.ev.context.root=ev-service
 nge.disney.ev.endpoint=/storeentitlement
 
