--- a/store-flow/gxpapp-config.properties
+++ b/store-flow/gxpapp-config.properties
@@ -1,9 +1,9 @@
-nge.disney.gxp.host=http://ec2-35-162-254-83.us-west-2.compute.amazonaws.com:8080
+nge.disney.gxp.host=http://ec2-35-167-64-1.us-west-2.compute.amazonaws.com
 nge.disney.gxp.context.root=gxp-service
 nge.disney.gxp.endpoint=/invokegxpservice
 
 #Mysql Properties
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://testschema.cxoqiuh7iisd.us-west-2.rds.amazonaws.com:3306/sfoneview
+url=jdbc:mysql://demo2inst2.cxoqiuh7iisd.us-west-2.rds.amazonaws.com:3306
 username=demo2user
 password=password
