--- a/store-flow/dreamsapp-config.properties
+++ b/store-flow/dreamsapp-config.properties
@@ -1,6 +1,6 @@
-rabbit.nge.host1=rabbitelb-996581662.us-west-2.elb.amazonaws.com
+rabbit.nge.host1=ec2-35-167-193-200.us-west-2.compute.amazonaws.com
 rabbit.nge.port1.1=5672
-rabbit.nge.host2=rabbitelb-996581662.us-west-2.elb.amazonaws.com
+rabbit.nge.host2=ec2-35-167-193-200.us-west-2.compute.amazonaws.com
 rabbit.nge.port2.2=5672
 rabbit.nge.username=admin
 rabbit.nge.password=admin
@@ -12,7 +12,7 @@ rabbit.nge.queue.DREAMS=DREAMS.PAYLOAD
 
 #Mysql Properties
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://testschema.cxoqiuh7iisd.us-west-2.rds.amazonaws.com:3306/sfoneview
+url=jdbc:mysql://demo2inst2.cxoqiuh7iisd.us-west-2.rds.amazonaws.com:3306/sfoneview
 username=demo2user
 password=password
 
