--- a/store-flow/gxpapp-config.properties
+++ b/store-flow/gxpapp-config.properties
@@ -4,6 +4,6 @@ nge.disney.gxp.endpoint=/invokegxpservice
 
 #Mysql Properties
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://demo2inst2.cxoqiuh7iisd.us-west-2.rds.amazonaws.com:3306
+url=jdbc:mysql://demo2inst2.cxoqiuh7iisd.us-west-2.rds.amazonaws.com:3306/sfoneview
 username=demo2user
 password=password
