--- a/provide-flow/gxpprovideservice-config.properties
+++ b/provide-flow/gxpprovideservice-config.properties
@@ -1,1 +1,1 @@
-gxp.app.host=http://storeelb-1837431292.us-west-2.elb.amazonaws.com:8080/gxpapp/
+gxp.app.host=http://ec2-35-167-64-1.us-west-2.compute.amazonaws.com:8080/gxpapp/
