--- a/store-flow/dreamsapp-config.properties
+++ b/store-flow/dreamsapp-config.properties
@@ -1,6 +1,6 @@
-rabbit.nge.host1=ec2-35-167-193-200.us-west-2.compute.amazonaws.com
+rabbit.nge.host1=ec2-35-163-13-73.us-west-2.compute.amazonaws.com
 rabbit.nge.port1.1=5672
-rabbit.nge.host2=ec2-35-167-193-200.us-west-2.compute.amazonaws.com
+rabbit.nge.host2=ec2-35-163-13-73.us-west-2.compute.amazonaws.com
 rabbit.nge.port2.2=5672
 rabbit.nge.username=admin
 rabbit.nge.password=admin
