--- a/store-flow/gxpapp-config.properties
+++ b/store-flow/gxpapp-config.properties
@@ -1,4 +1,4 @@
-nge.disney.gxp.host=http://ec2-35-167-64-1.us-west-2.compute.amazonaws.com
+nge.disney.gxp.host=http://ec2-35-167-163-147.us-west-2.compute.amazonaws.com:8080
 nge.disney.gxp.context.root=gxp-service
 nge.disney.gxp.endpoint=/invokegxpservice
 
