--- a/store-flow/guestservice-config.properties
+++ b/store-flow/guestservice-config.properties
@@ -3,3 +3,8 @@ driverClassName=com.mysql.jdbc.Driver
 url=jdbc:mysql://demo2inst2.cxoqiuh7iisd.us-west-2.rds.amazonaws.com:3306/sfoneview
 username=demo2user
 password=password
+
+nge.disney.gs.host=http://ec2-35-167-163-147.us-west-2.compute.amazonaws.com:8080
+nge.disney.gs.context.root=guest-service
+nge.disney.gs.fetchxid.endpoint=/providexid
+nge.disney.gs.storeguestkeys.endpoint=/storeguestkeys
