--- a/store-flow/gxpapp-config.properties
+++ b/store-flow/gxpapp-config.properties
@@ -1,9 +1,9 @@
-nge.disney.gxp.host=http://ec2-35-167-163-147.us-west-2.compute.amazonaws.com:8080
+nge.disney.gxp.host=http://ec2-35-167-233-199.us-west-2.compute.amazonaws.com:8080
 nge.disney.gxp.context.root=gxp-service
 nge.disney.gxp.endpoint=/invokegxpservice
 
 #Mysql Properties
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://demo2inst2.cxoqiuh7iisd.us-west-2.rds.amazonaws.com:3306/sfoneview
+url=jdbc:mysql://demo2inst.cxoqiuh7iisd.us-west-2.rds.amazonaws.com:3306/sfoneview
 username=demo2user
 password=password
