--- a/provide-flow/atsprovideservice-config.properties
+++ b/provide-flow/atsprovideservice-config.properties
@@ -3,6 +3,6 @@ redis.nge.port=6379
 
 #Mysql Properties
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://demo2inst2.cxoqiuh7iisd.us-west-2.rds.amazonaws.com:3306/sfoneview
+url=jdbc:mysql://demo2inst.cxoqiuh7iisd.us-west-2.rds.amazonaws.com:3306/sfoneview
 username=demo2user
 password=password
